plugins {
    id 'java'
    id 'maven-publish'
}

repositories {
    mavenCentral()
}

ext {
    spring = '6.0.3'
    springBoot = '3.0.5'
    acme4j = '2.16'
    tomcatEmbed = '10.1.7'
    jettyEmbed = '11.0.14'
    bouncycastle = '1.72'

    // tests
    testContainers = '1.16.2'
    awaitability = '4.1.1'
    jupiter = '5.8.1'
    assertj = '3.21.0'
}


group = 'com.github.valb3r'
version = '0.3.0'
sourceCompatibility = '17'
